Fix wrapping for controls and tweak animation layout

--- a/src/components/animation-app.scss
+++ b/src/components/animation-app.scss
@@ -17,7 +17,7 @@
   align-items: stretch;
 
   width: 320px;
-  height: 218px;
+  height: 220px;
 }
 
 .key-box.animation {
@@ -45,7 +45,7 @@
   flex-direction: column;
   justify-content: space-between;
 
-  height: 163px;
+  height: 168px;
   background-color: vars.$ani-light-8;
   border-radius: vars.$ani-radius-normal;
   padding: 10px;
