--- a/src/components/control-option.scss
+++ b/src/components/control-option.scss
@@ -12,11 +12,16 @@
     justify-content: flex-end;
     font-family: vars.$font-regular;
     font-weight: bold;
+    text-align: center;
   }
 
   .control-option-main {
     display: flex;
     align-items: center;
     gap: 6px;
+
+    .control-option-option {
+      text-align: center;
+    }
   }
 }
